
	* test/yaml/test_yaml.rb: added 0..1 test with "0".."1" on display.
	  it should be defined that the specification about what kind of Range
	  is supported in ruby's custom type in YAML.

Mon Feb 16 22:22:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* lib/generator.rb: corrected doc format
	* lib/rinda/rinda.rb: added documentation (from Hugh Sasse)
	* lib/rinda/tuplespace.rb: ditto

Mon Feb 16 20:28:52 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* bcc32/Makefile.sub: show more warnings. (refering to mingw)

	* bcc32/setup.mak: ditto.

Mon Feb 16 18:35:58 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (config.status): should create *.pdb on ext/,
	  not .ext/.

	* win32/Makefile.sub (config.status): convert the name of import
	  library.

	* lib/mkmf.rb (create_makefile): now don't need to remove
	  $(TARGET).lib.

Mon Feb 16 15:45:22 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check functions, fork spawnv.

	* io.c (rb_io_s_popen): accept argv not only single command line.

	* process.c (rb_proc_exec_n): export.

	* process.c (rb_check_argv): check if arguments are safe to invoke.

	* process.c (rb_fork): retry to fork.

	* process.c (rb_spawn): spawn child process asynchronously.

	* process.c (rb_f_system): raise an exception if the command could not
	  execute.

	* win32/win32.c (rb_w32_argv_size): count necessary size for joined
	  arguments.

	* win32/win32.c (rb_w32_join_argv): join arguments with quoting.

	* win32/win32.c (rb_w32_pipe_exec, rb_w32_spawn, rb_w32_aspawn):
	  accept program name adding to command line.

Mon Feb 16 15:18:33 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/racc/parser.rb: add note for Racc full package.

Mon Feb 16 15:13:01 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/racc/cparse/README: new file.

	* ext/racc/cparse/MANIFEST: add README.

Mon Feb 16 12:29:10 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/iconv.c (iconv_s_list): new method Iconv.list